@@ -1,0 +1,5 @@
+cmake_minimum_required(VERSION 2.6.3)
+project(QrsExamples)
+
+add_subdirectory(hello)
+add_subdirectory(print)
