@@ -1,5 +1,0 @@
-all:
-	scons
-
-clean:
-	scons -c
