@@ -16,7 +16,7 @@ vars.Add('CCFLAGS','Custom C compiler flags','')
 vars.Add('CPPFLAGS','Custom C/C++ preprocessor flags','')
 vars.Add('CXXFLAGS','Custom C++ compiler flags','')
 vars.Add('LINKFLAGS','Custom linker flags','')
-vars.Add('QRemoteSignal','QRemoteSignal library path live blank to detect it using pkg-config','')
+vars.Add('QRemoteSignal','QRemoteSignal library path. Live blank to detect it using pkg-config','')
 vars.Update(env)
 # Hack: need to convert flags lists from strings to lists
 env['CCFLAGS'] = Split(env['CCFLAGS'])
